# shaun-toolkit

./: .pre-commit-config.yaml  NOTES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/shaun_toolkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/toolkit/: main.py
tests/: test_hello.py
